@@ -6,6 +6,8 @@
 - P4A::closePopup() was added
 - popup.js was added
 - popup.tpl was added
+- beforeSetActivePage handler was added to P4A_Tab_Pane 
+- afterSetActivePage handler was added to P4A_Tab_Pane 
 
 1.99.13
 - Internet Explorer 7 is now correctly detected and p4a does not include png and pure css menu hack
